# MeetDjango

./: .gitignore  README.md  pyproject.toml
mysite/mysite/: settings.py
mysite/polls/: models.py  urls.py  views.py
mysite/polls/templates/polls/: detail.html  index.html
