[tool.poetry]
name = "meetdjango"
version = "0.1.1"
description = ""
authors = ["CoderBerryRabbit <CoderChaos@yeah.net>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^3.2.13"

[tool.poetry.dev-dependencies]
django-simpleui = "^2022.6.131"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
